<resources>
    <string name="app_name">TwitterClone</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">username</string>
    <string name="hint_search">Search</string>
    <string name="button_login">Login</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Signout</string>
    <string name="button_signup">Signup</string>
    <string name="text_signup">No Account? Go To Signup</string>
    <string name="text_login">Already Have an Account? Go To Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>