<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:src="@drawable/title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/ImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/StandardButton"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="onLogin"
                android:text="@string/button_login" />

            <TextView
                android:id="@+id/signupTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:onClick="goToSignup"
                android:text="@string/text_signup" />

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/loginProcessLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparent_color"
        android:gravity="center"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>