<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_3x"
            android:layout_marginBottom="@dimen/grid_3x"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:src="@drawable/default_user"
                android:layout_marginBottom="@dimen/grid_2x"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/photoIV"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_2x"
                android:layout_below="@id/usernameIL"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/emailTIL"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="onApply"
                android:text="@string/button_apply" />

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/applyButton"
                android:onClick="onSignout"
                android:layout_marginBottom="@dimen/grid_2x"
                android:text="@string/button_signout"
                style="@style/StandardButton"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TwitterClone.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.TwitterClone.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:id="@+id/profileProcessLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparent_color"
        android:elevation="5dp"
        android:visibility="gone"
        android:gravity="center"
        >
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>